syntax = "proto3";
package flowpb;
option go_package = "github.com/netsampler/goflow2/pb;flowpb";

message FlowMessage {
// This is a stub so the build command won't complain:

// > protoc -I=pb --go_opt=paths=source_relative --go_out=pb pb/flow.proto

// Since above package declaration leads to the compiled Go source looking up
// the real Goflow distribution, we do not need to keep this version of Goflows
// protobuf in sync.
}
